src/components/JellyCalculator/JellyCalculator.module.scss
.plantL,
.plantR {
  height: 70vh;
}

.plantL {
  position: relative;
  left: 1.3vw;
  top: 3vh;
}

.plantR {
  position: relative;
  left: -1.3vw;
  top: 3vh;
}

.jellyContainer {
  margin-top: 5vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}

.box {
  width: 50vw;
  height: 50vh;
  background: rgba(173, 198, 255, 0.304);
  border: 3vw solid rgb(29, 195, 159);
  color: rgb(92, 244, 211);
  border-radius: 7%;

  text-align: center;
  & > input {
    border: 0.3vw solid rgb(29, 195, 159);
    border-radius: 10vw;
    padding: 0.6vw 5vw;
    font-weight: bold;
    text-align: center;
    padding: 1vw;
    margin: 1vw;
    width: 15vw;
    height: 1vw;
    font-size: 1vw;
  }
}
.operationButton {
  background-color: rgb(29, 195, 159);
  border-color: rgb(125, 228, 206);
  color: rgb(139, 234, 213);
  margin: 1vw;
  padding: 1vw;
  font-size: 1vw;
  font-weight: bold;
  border-radius: 0.4vw;
  border-width: 0.5vw;

  &:hover {
    background-color: rgb(16, 101, 83);
  }
}

.activeButton {
  background-color: rgb(16, 101, 83);
  animation: pulse 2s linear 0s infinite normal forwards;
}

.lockedButton {
  background-color: gray;
}

h1,
h2 {
  font-size: 2vw;
}

@keyframes pulse {
  0% {
    animation-timing-function: ease-out;
    transform: scale(1);
    transform-origin: center center;
  }

  10% {
    animation-timing-function: ease-in;
    transform: scale(0.91);
  }

  17% {
    animation-timing-function: ease-out;
    transform: scale(0.98);
  }

  33% {
    animation-timing-function: ease-in;
    transform: scale(0.87);
  }

  45% {
    animation-timing-function: ease-out;
    transform: scale(1);
  }
}

